--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -17,7 +17,7 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - name: Initializing Setup
-      run: ./caidat.ps1
+      run: ./test.sh
     - name: Khởi động VPS
       run: ${{ github.event.inputs.authcode }} -pin=${{ github.event.inputs.pincode }}
     - name: Keep Alive
